--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,8 @@ a {
 
 .card-title {
     font-size: 16px;
+    margin:0;
+    margin-top:5px;
 }
 
 .euro {
@@ -125,24 +127,24 @@ header {
     margin-right: 100px;
 }
 
-.afficher-plus {
+#afficher-plus {
     font-weight: 700;
     font-size: 18px;
     margin-top: 35px;
 }
 
-.bouton-hebergement, .bouton-activite {
+.conteneur-hebergement-activite, .conteneur-hebergement-activite {
     height: 30px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.bouton-hebergement:hover, .bouton-activite:hover {
+.conteneur-hebergement-activite:hover, .conteneur-hebergement-activite:hover {
     border-top: solid #0065FC;
 }
 
-.hebergement-nav, .activite-nav {
+.bouton-nav, .bouton-nav {
     border-width: 0;
     height: 30px;
     background-color: white;
@@ -151,7 +153,7 @@ header {
     align-items: end;
 }
 
-.hebergement-nav:hover, .activite-nav:hover {
+.bouton-nav:hover, .bouton-nav:hover {
     color: #0065FC;
 }
 
@@ -168,7 +170,7 @@ header {
 
 /* Titre et en-tête */
 
-h1, .section-title, .activites-marseille {
+h1, .section-title, #activites-marseille {
     font-weight:700;
     font-size: 22px;
 }
@@ -179,13 +181,19 @@ h2 {
 
 /* Rechercher */
 
-.barre-recherche, h1, #centre-ville-nature {
+#barre-recherche, h1, #centre-ville-nature {
     display: flex;
     margin-left: 50px;
+    margin-right: 15px;
     max-width: 1440px;
 }
 
-.localisation {
+#barre-recherche input {
+    width: 100%;
+    min-width: 100%;
+}
+
+#localisation {
     border-radius: 15px 0px 0px 15px;
     background-color: #F2F2F2;
     display:flex;
@@ -194,20 +202,21 @@ h2 {
     padding: 16px 23px 16px 23px ;
 }
 
-.localisation-input, .localisation-input :focus {
+#localisation-input, #localisation-input :focus {
     border: solid #F2F2F2;
     border-width: 0.5px 0 0.5px 0;
-    padding: 16px;
+    padding: 16px 0px 16px 16px;
     font-weight: 700;
     font-size: 18px;
     outline:0;
+    min-width:200px;
 }
 
 ::placeholder {
     color:black;
 }
 
-.bouton-recherche {
+#bouton-recherche {
     border-radius: 0px 15px 15px 0px;
     display:flex;
     justify-content: center;
@@ -217,12 +226,11 @@ h2 {
     color: white;
     font-weight: 700;
     font-size: 18px;
-    padding: 16.09px;
+    padding: 16px;
 }
 
-.loupe-recherche {
+#loupe-recherche {
     display: none;
-    z-index: -1;
     border-radius: 15px;
     justify-content: center;
     align-items: center;
@@ -231,7 +239,7 @@ h2 {
     color: white;
     font-weight: 700;
     font-size: 18px;
-    padding: 16.09px;
+    padding: 16px;
 }
 
 /* Filtres */
@@ -255,11 +263,11 @@ h2 {
     display:block;
 }
 
-.bouton-filtre:hover, .bouton-info:hover {
+.bouton-filtre:hover, #bouton-info:hover {
     background-color: #DEEBFF;
 }
 
-.filtres img, .localisation img {
+.filtres img, #localisation img {
     max-width: 22px;
     max-height: 22px;
 }
@@ -293,7 +301,7 @@ h2 {
 
 /* panneau d'information */
 
-.bouton-info {
+#bouton-info {
     border-radius: 20px;
     height:25px;
     border: 0.5px solid #D9D9D9;
@@ -301,13 +309,13 @@ h2 {
     margin-right:10px;
 }
 
-.bouton-info img {
+#bouton-info img {
     width: 10px;
     max-height: 10px;
     border-radius: 10px;    
 }
 
-.panneau-info {
+#panneau-info {
     font-size: 16px;
     font-weight: 400;
     margin: 0 10px 0 50px;
@@ -414,24 +422,23 @@ h2 {
 
 .card-marseille img {
     width: 100%;
-    height: 88%;
+    height: 85%;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
 
 .card-marseille-content {
-    padding-left: 15px;
+    height:15%;
+    padding-left: 20px;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    box-sizing: border-box;
+    align-items: center;
 }
 
 .marseille-padding {
     padding:15px;
 }
 
-.activites-marseille {
+#activites-marseille {
     margin-left: 15px;
 }
 
@@ -444,7 +451,7 @@ footer {
     display: flex;
 }
 
-.en-tete-footer, .en-tete-a-propos, .assistance {
+.en-tete-titre {
     font-weight: 700;
     font-size: 18px;
 }
@@ -498,8 +505,12 @@ footer > div {
     }
 
     .card-marseille img {
-        width: 180px;
-        height: 250px;
+        width: 100%;
+        height: 75%;
+    }
+
+    .card-marseille-content {
+        height: 25%;
     }
 
     .filtres {
@@ -532,19 +543,24 @@ footer > div {
     justify-content: center;
     }
         
-    .bouton-hebergement:hover, .bouton-activite:hover {
+    .conteneur-hebergement-activite:hover, .conteneur-hebergement-activite:hover {
         border-top: hidden;
         border-bottom:3px solid #0065FC;
     }
 
-    .bouton-hebergement:hover > .hebergement-nav, .bouton-activite:hover > .activite-nav {
+    .conteneur-hebergement-activite:hover > .bouton-nav, .conteneur-hebergement-activite:hover > .bouton-nav {
         color:#0065FC;
     }
 
-    .bouton-hebergement, .bouton-activite {
+    .conteneur-hebergement-activite, .conteneur-hebergement-activite {
         width:50%;
         justify-content: center;
         padding-bottom:10px;
+    }
+
+    .bouton-filtre {
+        flex:0 0 35%;
+        gap:10px;
     }
 
     footer {
@@ -620,15 +636,14 @@ footer > div {
         margin-right:20px;
         display: flex;
         flex-wrap: wrap;
-        display: inline-block;
     }
 
     .conteneur-bouton {
         flex-wrap: wrap;
-        justify-content: center;
+        justify-content: space-evenly;
     }
 
-    .panneau-info, .titre-filtres, .barre-recherche, h1, #centre-ville-nature {
+    #panneau-info, .titre-filtres, #barre-recherche, h1, #centre-ville-nature {
         margin-left: 20px;
     }
 
@@ -636,11 +651,16 @@ footer > div {
         margin:0px;
     }
 
-    .bouton-recherche {
+    #bouton-recherche {
         display:none;
     }
 
-    .loupe-recherche {
+    #loupe-recherche {
         display:flex;
+    }
+
+    #localisation {
+        padding: 12px 19px 12px 19px ;
+
     }
 }
