--- a/css/style.css
+++ b/css/style.css
@@ -127,20 +127,23 @@ header {
     margin-right: 100px;
 }
 
+.hebergement-activite :hover{
+    line-height: 20px; 
+}
+
 #afficher-plus {
     font-weight: 700;
     font-size: 18px;
     margin-top: 35px;
 }
 
-.conteneur-hebergement-activite, .conteneur-hebergement-activite {
-    height: 30px;
+.conteneur-hebergement-activite {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.conteneur-hebergement-activite:hover, .conteneur-hebergement-activite:hover {
+.conteneur-hebergement-activite:hover {
     border-top: solid #0065FC;
 }
 
@@ -434,7 +437,7 @@ h2 {
     align-items: center;
 }
 
-.marseille-padding {
+.marseille-partie {
     padding:15px;
 }
 
@@ -536,6 +539,7 @@ footer > div {
     .hebergement-activite {
         margin:0px;
         width:100%;
+        justify-content: space-evenly;
     }
 
     .logo-img {
@@ -543,17 +547,25 @@ footer > div {
     justify-content: center;
     }
         
-    .conteneur-hebergement-activite:hover, .conteneur-hebergement-activite:hover {
+    .conteneur-hebergement-activite:hover {
         border-top: hidden;
+    }
+
+    .hebergement-activite > a {
+        width: 50%;
+    }
+
+    .hebergement-activite > a:hover {
         border-bottom:3px solid #0065FC;
+        height:40px;
     }
 
-    .conteneur-hebergement-activite:hover > .bouton-nav, .conteneur-hebergement-activite:hover > .bouton-nav {
-        color:#0065FC;
+    .bouton-nav:hover {
+    height: 32px;
     }
 
-    .conteneur-hebergement-activite, .conteneur-hebergement-activite {
-        width:50%;
+    .conteneur-hebergement-activite {
+        width:100%;
         justify-content: center;
         padding-bottom:10px;
     }
@@ -580,6 +592,7 @@ footer > div {
 
     .card-marseille {
         width: 100%;
+        height: 200px;
     }
 
     .card img, .card-marseille img {
@@ -662,5 +675,9 @@ footer > div {
     #localisation {
         padding: 12px 19px 12px 19px ;
 
+    }
+
+    .conteneur-hebergement-activite a :hover {
+        line-height: 15px; 
     }
 }
